PLT-7745 - Fixing horizontal scroll bar issue

--- a/sass/layout/_post.scss
+++ b/sass/layout/_post.scss
@@ -852,6 +852,11 @@
                 max-width: 150px;
             }
 
+            a {
+                display: inline-block;
+                padding-right: 10px;
+            }
+
             p {
                 line-height: inherit;
             }
